Added HomeKit. Removed UITests and Unit Tests

--- a/eve-home-alarm-manager/Info.plist
+++ b/eve-home-alarm-manager/Info.plist
@@ -39,6 +39,8 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSHomeKitUsageDescription</key>
+	<string>Configure sensor accessories from Eve</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
