Added and converted project to integrate Firebase with CocoaPods

--- a/eve-home-alarm-manager/.gitignore
+++ b/eve-home-alarm-manager/.gitignore
@@ -1,5 +1,14 @@
-# Created by https://www.gitignore.io/api/swift,xcode,firebase
-# Edit at https://www.gitignore.io/?templates=swift,xcode,firebase
+
+# Created by https://www.gitignore.io/api/swift,xcode,firebase,cocoapods
+# Edit at https://www.gitignore.io/?templates=swift,xcode,firebase,cocoapods
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
 
 ### Firebase ###
 .idea
@@ -109,4 +118,4 @@ iOSInjectionProject/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.gitignore.io/api/swift,xcode,firebase
+# End of https://www.gitignore.io/api/swift,xcode,firebase,cocoapods
